# nebula-architect

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_world.py
src/: main.py
src/audio/: mock_processor.py  processor.py
src/configs/: config.yaml
src/core/: system.py
src/rendering/: renderer.py
src/simulation/: agent_system.py  physics_engine.py
